--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     		</svg>
 			</div>
 			</div>
-                <div>
+                <div class="post-footer-footer">
                         <p>
                             Liked by <strong>4GeeksAcademy</strong>
                             , <strong>HTML5</strong>
